Initial fixes